# tonic-flatbuffers-example

./: Cargo.toml  build.rs  gen.sh
proto/: hello.fbs  hello_generated.rs
src/: client.rs  codec.rs  common.rs  lib.rs  server.rs
